--- a/ItecReg(pro)/ItecReg(pro).vbproj
+++ b/ItecReg(pro)/ItecReg(pro).vbproj
@@ -140,6 +140,15 @@
   <ItemGroup>
     <None Include="Resources\LoginBtn.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SignUp.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SignUp1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\SignUp.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
